[v8r8p12]
use DIRAC v6r17p26

* added jobType HistoMerge
* remove the skeleton file and modify the script accordenly

[v8r8p11]
use DIRAC v6r17p25

* Doc: More detail about updating pilot version
* In gitlab-ci, take the releases.cfg in a different branch depending on the tag
* PopularityAnalysisAgent: alow to specify a mail sender address
* Correct documentation for making releases
* remove CAs scripts
* do not ignore the run directory
* Document prod/run flushing

[v8r8p10]
use DIRAC v6r17p24

Previous release had a wrong projectConfig.json


[v8r8p9]
use DIRAC v6r17p24

Improve release documentation

[v8r8p8]
use DIRAC v6r17p24

[v8r8p7]
use DIRAC v6r17p24

* Fix conf.py of documentation

[v8r8p6]
use DIRAC v6r17p23

* change qt in Qt and remove gcc
* Update heptools_x86_64-slc6-gcc48-opt.json

[v8r8p5]
use DIRAC v6r17p24

* Link the documentation
* Document data distribution

[v8r8p4]
use DIRAC v6r17p23

* substitute != with is not
* Fix different bugs in EverythingElse template

[v8r8p3]
use DIRAC v6r17p23

* fix scripts
* RAWIntegrity: perform the removal by bulk

[v8r8p2]
use DIRAC v6r17p22

ˇ* remove the qtweb and use the default browser insteed
* add all platforms to the documentation
* correct the document format
* Move the check on SystemConfig at for loop level
* Fix the RecoStripping template to cope with more than one step
* avoiding spam emails
* fix for stupid formats of output directories
* visibility flag must be not used during the step modification
* Update tests according to the new compression level specification
* Set defaults for compression level in templates

[v8r8p1]
use DIRAC v6r17p21

* Fix extra curry brace in recoOutputVisFlag

[v8r8]
use DIRAC v6r17p21

* adding the Output Files Visibility
* add stepid to the primary key and correct the tests
* add the file types to the tests
* add ; as separator
* allow to change the number of printed LFNs fix check when SEs are specified
* use the filetypeid insetad of the name