@@ -7,6 +7,14 @@ Sources
 
 Releases
 {
+
+  v8r8p13
+  {
+    Modules = LHCbDIRAC:v8r8p13, LHCbWebDIRAC:v4r3p3
+    Depends = DIRAC:v6r17p27
+    LcgVer = 2017-05-23
+  }
+
   v8r8p12
   {
     Modules = LHCbDIRAC:v8r8p12, LHCbWebDIRAC:v4r3p3
