@@ -1,3 +1,13 @@
+[v8r8p13]
+use DIRAC v6r17p27
+
+* simplified template
+* added test for steps
+* fix for histomerge production type
+* allow to save the files in CSV format
+* Remove wrongly hardtyped parameters
+* Fix a problem with the compression level
+
 [v8r8p12]
 use DIRAC v6r17p26
 
